@@ -4182,20 +4182,20 @@ extern "C" {
   __MINGW_TYPEDEF_AW(PHELPWININFO)
   __MINGW_TYPEDEF_AW(LPHELPWININFO)
 
-#define HELP_CONTEXT 0x0001L
-#define HELP_QUIT 0x0002L
-#define HELP_INDEX 0x0003L
-#define HELP_CONTENTS 0x0003L
-#define HELP_HELPONHELP 0x0004L
-#define HELP_SETINDEX 0x0005L
-#define HELP_SETCONTENTS 0x0005L
-#define HELP_CONTEXTPOPUP 0x0008L
-#define HELP_FORCEFILE 0x0009L
-#define HELP_KEY 0x0101L
-#define HELP_COMMAND 0x0102L
-#define HELP_PARTIALKEY 0x0105L
-#define HELP_MULTIKEY 0x0201L
-#define HELP_SETWINPOS 0x0203L
+#define HELP_CONTEXT 0x0001
+#define HELP_QUIT 0x0002
+#define HELP_INDEX 0x0003
+#define HELP_CONTENTS 0x0003
+#define HELP_HELPONHELP 0x0004
+#define HELP_SETINDEX 0x0005
+#define HELP_SETCONTENTS 0x0005
+#define HELP_CONTEXTPOPUP 0x0008
+#define HELP_FORCEFILE 0x0009
+#define HELP_KEY 0x0101
+#define HELP_COMMAND 0x0102
+#define HELP_PARTIALKEY 0x0105
+#define HELP_MULTIKEY 0x0201
+#define HELP_SETWINPOS 0x0203
 #define HELP_CONTEXTMENU 0x000a
 #define HELP_FINDER 0x000b
 #define HELP_WM_HELP 0x000c
